log/service.log
  File "/root/code-server/project/usiwatch/server/service.py", line 58
    watchers = 
              ^
SyntaxError: invalid syntax
